test/invalid/len_non_list.py
# len() on non-list type
def main() -> None:
    x: int = 5
    y: int = len(x)
    print(y)
